--- a/patent-search-app/manifest.yml
+++ b/patent-search-app/manifest.yml
@@ -4,5 +4,6 @@ applications:
   memory: 1GB
   instances: 1
   path: target/patent-search-0.0.1-SNAPSHOT.war
+  buildpack: https://github.com/cloudfoundry/java-buildpack.git
   services:
-  - patent-data
+  - patent-data-service
