--- a/patent-search-app/src/main/resources/application.properties
+++ b/patent-search-app/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.tomcat.basedir: target/tomcat
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.datasource.platform=h2
