Added profiles for fed2 and pws cf deployments

--- a/patent-search-app/pom.xml
+++ b/patent-search-app/pom.xml
@@ -74,5 +74,65 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<profiles>
+		<profile>
+			<id>fed2</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.cloudfoundry</groupId>
+                		<artifactId>cf-maven-plugin</artifactId>
+                		<version>1.0.4</version>
+		                <configuration>
+		                    <server>fed2-cf-instance</server>
+		                    <target>http://api.federal2.fe.gopivotal.com</target>
+		                    <org>FederalTeam</org>
+		                    <space>development</space>
+		                    <trustSelfSignedCerts>true</trustSelfSignedCerts>
+		                    <appname>uspto-patent-app</appname>
+		                    <memory>1024</memory>
+		                    <healthCheckTimeout>60</healthCheckTimeout>
+		                    <services>
+		                        <service>
+		                            <label>p-mysql</label>
+		                            <name>patent-data-service</name>
+		                            <plan>100mb-dev</plan>
+		                        </service>
+		                    </services>
+		                </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>pws</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.cloudfoundry</groupId>
+                		<artifactId>cf-maven-plugin</artifactId>
+                		<version>1.0.4</version>
+		                <configuration>
+		                    <server>pws-cf-instance</server>
+		                    <target>http://api.run.pivotal.io</target>
+		                    <org>Federal</org>
+		                    <space>development</space>
+		                    <appname>uspto-patent-app</appname>
+		                    <memory>1024</memory>
+		                    <healthCheckTimeout>60</healthCheckTimeout>
+		                    <services>
+		                        <service>
+		                            <label>elephantsql</label>
+		                            <name>patent-data-service</name>
+		                            <plan>turtle</plan>
+		                        </service>
+		                    </services>
+		                </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
